Jetty forenkling + fikser baseline + test ny oracle image. (#809)
* Jetty forenkling + fikser baseline + test ny oracle image.

* Slå av standard oracle image

* Dropper db init hvis -DskipTests brukes.